--- a/.gitignore
+++ b/.gitignore
@@ -400,3 +400,6 @@ data/large
 # .DS_Store(英文全称 Desktop Services Store)是一种由苹果公司的Mac OS X操作系统所创造的隐藏文件，
 # 目的在于存贮目录的自定义属性，例如文件的图标位置或者是背景色的选择。相当于 Windows 下的 desktop.ini。
 *.DS_Store
+
+.vscode
+.idea
